# pyrogram_testovoye

./: .gitignore  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 2024_05_18_1337-19ff10692ebf_init_migration.py
bot/: .dockerignore  .env.example  Dockerfile  entrypoint.sh  load_msgs.py  main.py  pyproject.toml  userbot.py
bot/alembic/: env.py
bot/alembic/versions/: 2024_05_20_0029-d181d2302032_add_profile_and_message_models.py  2024_05_20_0107-d523a94490d5_add_field_msg_num_to_recieve_to_profiles.py
bot/data/: messages.json  triggers.json
bot/database/: __init__.py  config.py  db_helper.py  messages.py  profiles.py
bot/database/enums/: __init__.py  enums.py
bot/database/models/: __init__.py  message.py  profile.py
bot/database/schemas/: __init__.py  message.py  profile.py
bot/handlers/: __init__.py  get_msg.py  get_triggers.py
bot/logs/: logging_config.json
bot/utils/: __init__.py  check_profiles_and_send_msg.py
compose/: .env.example  docker-compose.yml
