[tool.poetry]
name = "pyrogram-testovoye"
version = "0.1.0"
description = ""
authors = ["ruki-qq <ruki@duck.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Pyrogram = "^2.0.106"
TgCrypto = "^1.2.5"
uvloop = "^0.19.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.30"}
alembic = "^1.13.1"
pydantic-settings = "^2.2.1"
sqlalchemy-utils = "^0.41.2"
asyncpg = "^0.29.0"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
